feat: 书模式预览按品质档展示，扭蛋中心扩为54格网格
- 预览改为按品质档展示中选概率/附魔数/出货等级，管理员可见各档附魔清单
- 新增 AiyatsbusEnchantManager.getPoolInfo，与 drawBook 共用 buildDrawableTiers，保证预览概率=实际抽奖概率
- 扭蛋中心从27格扩为54格网格（28个机器位），修复机器多于4台被丢弃的问题；保留 slot 手动定位+自动补位
- 书模式机器在列表显示「产出: Aiyatsbus 附魔书」而非「奖品数量: 0 种」
- gacha.yml 补充附魔池自动排除规则说明

Co-Authored-By: Claude <noreply@anthropic.com>